# EdgeDetectionApp

./: .gitignore  LICENSE  README.md  around.txt  edge_logs.txt  full2_log.txt  full_log.txt
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetectionapp/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/edgeviewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionapp/: MainActivity.java
app/src/main/java/com/example/edgedetectionapp/gl/: EdgeGLSurfaceView.java  EdgeRenderer.java
app/src/main/java/com/example/edgeviewer/: MainActivity.java
app/src/main/java/com/example/edgeviewer/gl/: EdgeGLSurfaceView.java  EdgeRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgedetectionapp/: ExampleUnitTest.java
app/src/test/java/com/example/edgeviewer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.ts  package-lock.json  package.json  style.css  vite.config.js
